--- a/testreport/old/Suite/groups.html
+++ b/testreport/old/Suite/groups.html
@@ -1,1 +1,5 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>dev</td><td>Scenario_Login.Login_validLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]<br/>Scenario_Search.Search_invalidSearch(java.util.Map)[pri:0, instance:Scripts.Scenario_Search@24a67]<br/>Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]<br/></td></tr>
+<tr><td>prod</td><td>Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]<br/></td></tr>
+<tr><td>qa</td><td>Scenario_Login.Login_validLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]<br/>Scenario_Search.Search_validSearch(java.util.Map)[pri:0, instance:Scripts.Scenario_Search@24a67]<br/></td></tr>
+</table>
