--- a/testreport/old/Suite/classes.html
+++ b/testreport/old/Suite/classes.html
@@ -4,19 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Scripts.Scenario_Login</td>
+<td>Scripts.Scenario_Search</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_invalidLogin</td>
-<td>&nbsp;</td></tr>
+<td>Search_invalidSearch</td>
+<td>dev </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
-<td>Login_validLogin</td>
-<td>&nbsp;</td></tr>
+<td>Search_validSearch</td>
+<td>qa </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -26,14 +28,54 @@
 <tr>
 <td>&nbsp;</td>
 <td>launchApp</td>
-<td>&nbsp;</td></tr>
+<td>qa prod dev </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>tearDown</td>
-<td>&nbsp;</td></tr>
+<td>qa prod dev </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>Scripts.Scenario_Login</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Login_invalidLogin</td>
+<td>prod dev </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Login_validLogin</td>
+<td>qa dev </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchApp</td>
+<td>qa prod dev </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>qa prod dev </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
