--- a/testreport/old/Suite/methods-alphabetical.html
+++ b/testreport/old/Suite/methods-alphabetical.html
@@ -1,24 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6de788">  <td>17/12/08 14:55:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@174b225]">Login_invalidLogin</td> 
-  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="6de788">  <td>17/12/08 14:55:40</td>   <td>10260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@174b225]">Login_invalidLogin</td> 
-  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="6de788">  <td>17/12/08 14:55:48</td>   <td>17920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_validLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@174b225]">Login_validLogin</td> 
-  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:21</td>   <td>-8477</td> <td title="&gt;&gt;Commonlib.initializeReport()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;initializeReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:22</td>   <td>-7606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:33</td>   <td>3544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:42</td>   <td>12404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:33</td>   <td>2950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@174b225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:42</td>   <td>11984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@174b225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:50</td>   <td>20277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@174b225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
+<tr bgcolor="a98982">  <td>17/12/09 13:16:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]">Login_invalidLogin</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="a98982">  <td>17/12/09 13:16:30</td>   <td>11814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]">Login_invalidLogin</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="a98982">  <td>17/12/09 13:16:42</td>   <td>23484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_validLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]">Login_validLogin</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="f2a7d5">  <td>17/12/09 13:16:52</td>   <td>33342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Search.Search_invalidSearch(java.util.Map)[pri:0, instance:Scripts.Scenario_Search@24a67]">Search_invalidSearch</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="f2a7d5">  <td>17/12/09 13:16:59</td>   <td>40273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Search.Search_validSearch(java.util.Map)[pri:0, instance:Scripts.Scenario_Search@24a67]">Search_validSearch</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:09</td>   <td>-9798</td> <td title="&gt;&gt;Commonlib.initializeReport()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;initializeReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:10</td>   <td>-8970</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:24</td>   <td>5164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:36</td>   <td>17495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:47</td>   <td>27898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Search@24a67]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:54</td>   <td>35027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Search@24a67]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:22</td>   <td>3868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:35</td>   <td>16619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:46</td>   <td>27027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:53</td>   <td>34165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Search@24a67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:17:00</td>   <td>41823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Search@24a67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
 </table>
