--- a/testreport/old/Suite/methods.html
+++ b/testreport/old/Suite/methods.html
@@ -1,24 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:21</td>   <td>0</td> <td title="&gt;&gt;Commonlib.initializeReport()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;initializeReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:22</td>   <td>871</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="6de788">  <td>17/12/08 14:55:30</td>   <td>8477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@174b225]">Login_invalidLogin</td> 
-  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:33</td>   <td>11427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@174b225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:33</td>   <td>12021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="6de788">  <td>17/12/08 14:55:40</td>   <td>18737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@174b225]">Login_invalidLogin</td> 
-  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:42</td>   <td>20461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@174b225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:42</td>   <td>20881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp()[pri:0, instance:Scripts.Scenario_Login@174b225]">&gt;&gt;launchApp</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="6de788">  <td>17/12/08 14:55:48</td>   <td>26397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_validLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@174b225]">Login_validLogin</td> 
-  <td>main@22800059</td>   <td></td> </tr>
-<tr bgcolor="dbc5d3">  <td>17/12/08 14:55:50</td>   <td>28754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@174b225]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@22800059</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:09</td>   <td>0</td> <td title="&gt;&gt;Commonlib.initializeReport()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;initializeReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:10</td>   <td>828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="a98982">  <td>17/12/09 13:16:19</td>   <td>9798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]">Login_invalidLogin</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:22</td>   <td>13666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:24</td>   <td>14962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="a98982">  <td>17/12/09 13:16:30</td>   <td>21612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_invalidLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]">Login_invalidLogin</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:35</td>   <td>26417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:36</td>   <td>27293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Login@a12c19]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="a98982">  <td>17/12/09 13:16:42</td>   <td>33282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Login.Login_validLogin(java.util.Map)[pri:0, instance:Scripts.Scenario_Login@a12c19]">Login_validLogin</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:46</td>   <td>36825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Login@a12c19]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:47</td>   <td>37696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Search@24a67]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="f2a7d5">  <td>17/12/09 13:16:52</td>   <td>43140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Search.Search_invalidSearch(java.util.Map)[pri:0, instance:Scripts.Scenario_Search@24a67]">Search_invalidSearch</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:53</td>   <td>43963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Search@24a67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:16:54</td>   <td>44825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Commonlib.launchApp(java.lang.String)[pri:0, instance:Scripts.Scenario_Search@24a67]">&gt;&gt;launchApp</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="f2a7d5">  <td>17/12/09 13:16:59</td>   <td>50071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Scenario_Search.Search_validSearch(java.util.Map)[pri:0, instance:Scripts.Scenario_Search@24a67]">Search_validSearch</td> 
+  <td>main@12896277</td>   <td></td> </tr>
+<tr bgcolor="94d69f">  <td>17/12/09 13:17:00</td>   <td>51621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Commonlib.tearDown()[pri:0, instance:Scripts.Scenario_Search@24a67]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@12896277</td>   <td></td> </tr>
 </table>
